# sentipulseLeadGen.

./: .gitignore  dripRenaming.py  main.py  pyproject.toml
canBeDeleted/frontend_Glass/: metadata.json
canBeDeleted/frontend_Glass/docs/: README.md
canBeDeleted/frontend_Glass/src/: App.tsx  data.ts  index.css  types.ts
canBeDeleted/frontend_Glass/src/components/: AntiGravityCanvas.tsx  AntiGravityPlayground.tsx  DashboardView.tsx  GoogleReviewsTab.tsx  Header.tsx  LighthouseSEOTab.tsx  LinksAuditTab.tsx  NeighborsTab.tsx  Particles.tsx  ProcessLoop.tsx  RankTrackerTab.tsx  RawDataTab.tsx  RunPipelineView.tsx  WebsiteCrawlTab.tsx
canBeDeleted/frontendfromProductionCode/: OverviewDashboard_page.js  ReviewSankey.js  ReviewsList.js  SentimentDistribution.js
lead_reviews_scraper/: __init__.py  bus_pipeline.py  run.py
lead_reviews_scraper/google-reviews-scraper-pro/modules/: scraper.py
sentipulse_ai_pipeline/: __init__.py  leadgen_pipeline.py  pipeline.py
sentipulse_ai_pipeline/modules/: colors.py  config.py  pipeline_agent.py  repositories.py  review_clustering.py  sankey.py  schemas.py  sentiment.py  utils.py
sentipulse_dashboard/: index.html  package-lock.json  package.json
sentipulse_dashboard/src/: App.tsx  index.css
sentipulse_dashboard/src/components/: FilterBar.tsx  MonthlyBarChart.tsx  ReviewSankey.tsx  ReviewsList.tsx  SentimentDistribution.tsx
