[project]
name = "sentipulseleadgen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.24",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.4",
    "googletrans==4.0.2",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "seleniumbase>=4.49.7",
    "sentence-transformers>=5.5.1",
    "torch>=2.10.0",
    "tqdm>=4.68.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
pipeline = "main:main"
